Fixes #1629 ClayCSS Atlas Accordion collapse icon should be 12px
Fixes #1629 ClayCSS Sheet added option to configure `$sheet-subtitle-collapse-icon-font-size`

Fixes #1629 ClayCSS Atlas Sheet `$sheet-subtitle-collapse-icon-font-size` should be 12px

--- a/packages/clay-css/src/scss/atlas/variables/_panels.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_panels.scss
@@ -1,7 +1,10 @@
 // Panel Header
 
 $panel-header-border-bottom-width: 0 !default;
+$panel-header-font-size: 0.875rem !default; // 14px
 $panel-header-link-hover-text-decoration: none !default;
+
+$panel-header-collapse-icon-font-size: 0.75rem !default; // 12px
 
 // Panel Footer
 
